removed duplicate script code. see: http://bugzilla.wyona.com/cgi-bin/bugzilla/show_bug.cgi?id=6808 thanks to guillaume